--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,31 @@
+@font-face {
+  font-family: "PT Sans Narrow";
+  src: url("fonts/ptsansnarrow.woff2") format("woff2");
+  src: url("fonts/ptsansnarrow.woff") format("woff");
+  font-weight: normal;
+}
+@font-face {
+  font-family: "PT Sans Narrow Bold";
+  src: url("fonts/ptsansnarrowbold.woff2") format("woff2");
+  src: url("fonts/ptsansnarrowbold.woff") format("woff");
+  font-weight: bold;
+}
+body {
+  max-width: 320px;
+  margin: 0;
+  padding: 0;
+  font-family: "PT Sans Narrow";
+  font-size: 18px;
+  line-height: 27px;
+  color: #f7f4f1;
+  font-weight: normal;
+  background-color: #282828;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+/*Файл mixins*/
 .nav-main {
   width: 320px;
   margin: 0 auto;
