--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,11 @@
 @font-face {
   font-family: "PT Sans Narrow";
-  src: url("fonts/ptsansnarrow.woff2") format("woff2");
-  src: url("fonts/ptsansnarrow.woff") format("woff");
+  src: url("../fonts/ptsansnarrow.woff2") format("woff2"), url("../fonts/ptsansnarrow.woff") format("woff");
   font-weight: normal;
 }
 @font-face {
   font-family: "PT Sans Narrow Bold";
-  src: url("fonts/ptsansnarrowbold.woff2") format("woff2");
-  src: url("fonts/ptsansnarrowbold.woff") format("woff");
+  src: url("../fonts/ptsansnarrowbold.woff2") format("woff2"), url("../fonts/ptsansnarrowbold.woff") format("woff");
   font-weight: bold;
 }
 body {
@@ -62,5 +60,23 @@ img {
   }
   .user-list {
     width: 160px;
+  }
+}
+.header-main {
+  display: flex;
+  flex-direction: column;
+}
+.header-main__logo-link {
+  max-height: 85px;
+}
+@media (min-width: 768px) {
+  .header-main__logo-link {
+    order: 2;
+    height: 400px;
+  }
+}
+@media (min-width: 1200px) {
+  .header-main__logo-link {
+    height: 648px;
   }
 }
