--- a/less/style.less
+++ b/less/style.less
@@ -6,21 +6,17 @@
 
 @font-face {
     font-family: "PT Sans Narrow";
-    src: url("fonts/ptsansnarrow.woff2") format("woff2");
-    src: url("fonts/ptsansnarrow.woff") format("woff");
+    src: url("../fonts/ptsansnarrow.woff2") format("woff2"),
+             url("../fonts/ptsansnarrow.woff") format("woff");
     font-weight: normal;
 }
 
 @font-face {
     font-family: "PT Sans Narrow Bold";
-    src: url("fonts/ptsansnarrowbold.woff2") format("woff2");
-    src: url("fonts/ptsansnarrowbold.woff") format("woff");
+    src: url("../fonts/ptsansnarrowbold.woff2") format("woff2"),
+    url("../fonts/ptsansnarrowbold.woff") format("woff");
     font-weight: bold;
 }
-
-@tablet-width: 768px;
-@desktop-width: 1200px;
-@bg-darkgray: #282828;
 
 body {
     max-width: 320px;
@@ -51,3 +47,4 @@ img {
 }
 
 @import "nav-main.less";
+@import "header-main.less";
