--- a/less/header-main.less
+++ b/less/header-main.less
@@ -1,7 +1,12 @@
 // out: ../css/
 
+@tablet-width: 768px;
+@desktop-width: 1200px;
+
 .header-main {
+    width: 320px;
     display: flex;
+    margin: 0 auto;
     flex-direction: column;
 }
 
