--- a/less/style.less
+++ b/less/style.less
@@ -35,6 +35,19 @@ img {
     height: auto;
 }
 
+.visually-hidden:not(:focus):not(:active) {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 /*Файл mixins*/
 
 .no-outline() {
@@ -48,3 +61,4 @@ img {
 
 @import "nav-main.less";
 @import "header-main.less";
+@import "stats.less";
