--- a/less/style.less
+++ b/less/style.less
@@ -19,13 +19,13 @@
 }
 
 body {
-    max-width: 320px;
+    min-width: 320px;
     margin: 0;
     padding: 0;
     font-family: "PT Sans Narrow";
     font-size: 18px;
     line-height: 27px;
-    color: #f7f4f1;
+    color: #ffffff;
     font-weight: normal;
     background-color: @bg-darkgray;
 }
