--- a/css/nav-main.css
+++ b/css/nav-main.css
@@ -39,7 +39,8 @@
   padding: 0;
   list-style: none;
 }
-.site-list__item a {
+.site-list__item a,
+.site-list__item--active a {
   display: block;
   padding: 0 21px;
   line-height: 49px;
@@ -48,15 +49,21 @@
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
+  background-color: #826550;
 }
 .site-list__item a:link,
+.site-list__item--active a:link,
 .site-list__item a:visited,
-.site-list__item a:active {
+.site-list__item--active a:visited,
+.site-list__item a:active,
+.site-list__item--active a:active {
   color: #fff;
   text-decoration: none;
 }
 .site-list__item a:hover,
-.site-list__item a:focus {
+.site-list__item--active a:hover,
+.site-list__item a:focus,
+.site-list__item--active a:focus {
   background-color: #755a46;
 }
 .header-main__logo-link {
@@ -127,8 +134,7 @@
   display: block;
   padding: 0 21px 0 49px;
   line-height: 49px;
-  border-bottom: 1px solid #71543f;
-  border-top: 1px solid #886e5b;
+  border-top: 1px solid #71543f;
 }
 .user-list__item a:hover,
 .user-list__item a:focus,
@@ -183,10 +189,39 @@
   .nav-main--opened .nav-main__wrapper {
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     left: 70px;
     z-index: 10;
     min-height: 80vh;
     background-color: #6a4d38;
+  }
+  .nav-main--opened .nav-main__wrapper::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 7px;
+    height: 100%;
+    box-shadow: inset 4px 0 7px -2px rgba(0, 0, 0, 0.4);
+  }
+  .nav-main--no-js .nav-main__toggle {
+    display: none;
+  }
+  .nav-main--no-js .nav-main__wrapper {
+    position: static;
+    min-height: 0;
+  }
+}
+@media (min-width: 768px) {
+  .nav-main {
+    width: auto;
+    margin: 0;
+  }
+  .nav-main__wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 640px;
+    margin: 0 auto;
   }
 }
