--- a/less/nav-main.less
+++ b/less/nav-main.less
@@ -54,7 +54,8 @@
     list-style: none;
 }
 
-.site-list__item a {
+.site-list__item a,
+.site-list__item--active a {
     display: block;
     padding: 0 21px;
     line-height: 49px;
@@ -63,6 +64,7 @@
     text-transform: uppercase;
     text-decoration: none;
     font-weight: bold;
+    background-color: #826550;
 
     &:link,
     &:visited,
@@ -154,8 +156,7 @@
     display: block;
     padding: 0 21px 0 49px;
     line-height: 49px;
-    border-bottom: 1px solid #71543f;
-    border-top: 1px solid #886e5b;
+    border-top: 1px solid #71543f;
     
     &:hover,
     &:focus,
@@ -222,10 +223,44 @@
     .nav-main--opened .nav-main__wrapper {
         position: absolute;
         top: 0;
-        left: 0;
+        right: 0;
         left: 70px;
         z-index: 10;
         min-height: 80vh;
         background-color: #6a4d38;
+    }
+
+    .nav-main--opened .nav-main__wrapper::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        width: 7px;
+        height: 100%;
+        box-shadow: inset 4px 0 7px -2px rgba(0, 0, 0, 0.4);
+    }
+
+    .nav-main--no-js .nav-main__toggle {
+        display: none;
+    }
+
+    .nav-main--no-js .nav-main__wrapper {
+        position: static;
+        min-height: 0;
+    }
+}
+
+@media (min-width: @tablet-width) {
+    .nav-main {
+        width: auto;
+        margin: 0;
+    }
+
+    .nav-main__wrapper {
+        display: flex;
+        justify-content: space-between;
+        width: 640px;
+        margin: 0 auto;
     }
 }
