--- a/less/nav-main.less
+++ b/less/nav-main.less
@@ -32,19 +32,13 @@
     .user-list {
         width: 60px;
     }
-}
 
-@media (min-width: @desktop-width) {
-    .nav-main__wrapper {
-        width: 960px;
-    }
-
-    .site-list {
-        width: 780px;
-    }
-
-    .user-list {
-        width: 160px;
+    .user-list__login {
+        display: block;
+        width: 60px;
+        height: 72px;
+        padding: 0;
+        font-size: 0;
     }
 }
 
@@ -77,6 +71,11 @@
     &:focus {
         background-color: #755a46;
     }
+}
+
+.site-list__item--active a:hover,
+.site-list__item--active a:focus {
+    background-color: #826550;
 }
 
 .header-main__logo-link {
@@ -196,6 +195,20 @@
     }
 }
 
+@media (min-width: @tablet-width) {
+    .user-list__login-icon {
+        top: 28px;
+        left: 12px;
+    }
+
+    .user-list__item a:hover,
+    .user-list__item a:focus,
+    .user-list__item a:active {
+        color: #624530;
+        background: none;
+    }
+}
+
 .user-list__item a:hover .user-list__login-icon,
 .user-list__item a:focus .user-list__login-icon,
 .user-list__item a:active .user-list__login-icon {
@@ -255,6 +268,7 @@
     .nav-main {
         width: auto;
         margin: 0;
+        background: #000;
     }
 
     .nav-main__wrapper {
@@ -262,5 +276,119 @@
         justify-content: space-between;
         width: 640px;
         margin: 0 auto;
+    }
+
+    .nav-main .nav-main__toggle {
+        display: none;
+    }
+
+    .site-list {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 570px;
+    }
+
+    .site-list__item {
+        margin-right: 32px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+
+        &--active {
+            position: relative;
+
+            &::after {
+                content: "";
+                position: absolute;
+                left: 2px;
+                right: 2px;
+                bottom: -2px;
+                height: 3px;
+                background-color: #826550;
+            }
+        }
+    }
+
+    .site-list__item a {
+        padding: 0 3px;
+        line-height: 72px;
+        background: none;
+        border: none;
+    }
+
+    .site-list__item a[href] {
+        &:hover {
+            color: #000;
+            background-color: #fff;
+        }
+
+        &:active {
+            color: #fff;
+            background-color: #000;
+            opacity: 0.3;
+        }
+    }
+
+    .site-list__item--active a:hover,
+    .site-list__item--active a:focus {
+        background: none;
+    }
+}
+
+@media (min-width: @desktop-width) {
+    .nav-main__wrapper {
+        width: 960px;
+    }
+    
+    .site-list {
+        width: 780px;
+    }
+    
+    .site-list__item {
+        margin-right: 0;
+
+        &--active::after {
+            left: 30px;
+            right: 30px;
+        }
+    }
+
+    .site-list__item a {
+        padding: 0 31px;
+    }
+
+    .user-list {
+        width: auto;
+        max-width: 160px;
+    }
+
+    .user-list__item a[href] {
+        &:hover {
+            color: #000;
+            background-color: #fff;
+        }
+
+        &:active {
+            color: #fff;
+            background-color: #000;
+            opacity: 0.3;
+        }
+    }
+
+    .nav-main .user-list__login {
+        font-size: 18px;
+        line-height: 72px;
+        font-weight: bold;
+
+    }
+
+    .user-list__login:hover polygon{
+        fill: #000000;
+    }
+
+    .user-list__login-icon {
+        left: 15px;
     }
 }
