--- a/less/style.less
+++ b/less/style.less
@@ -12,7 +12,7 @@
 }
 
 @font-face {
-    font-family: "PT Sans Narrow Bold";
+    font-family: "PT Sans Narrow";
     src: url("../fonts/ptsansnarrowbold.woff2") format("woff2"),
     url("../fonts/ptsansnarrowbold.woff") format("woff");
     font-weight: bold;
