--- a/css/header-main.css
+++ b/css/header-main.css
@@ -4,16 +4,37 @@
   flex-direction: column;
 }
 .header-main__logo-link {
-  max-height: 85px;
+  text-align: center;
+}
+.header-main__logo-header img {
+  width: 226px;
+  height: 30px;
 }
 @media (min-width: 768px) {
+  .header-main {
+    background-color: #000;
+  }
   .header-main__logo-link {
     order: 2;
+    width: 100%;
     height: 400px;
+    background: url('../img/background-tablet.jpg') center -9px no-repeat;
+    padding: 0;
+  }
+  .header-main__logo-link img {
+    width: 370px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 40px;
   }
 }
 @media (min-width: 1200px) {
   .header-main__logo-link {
     height: 648px;
+    background-position: center 0;
+    background-size: cover;
+  }
+  .header-main__logo-link img {
+    margin-top: 57px;
   }
 }
