--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   font-weight: normal;
 }
 @font-face {
-  font-family: "PT Sans Narrow Bold";
+  font-family: "PT Sans Narrow";
   src: url("../fonts/ptsansnarrowbold.woff2") format("woff2"), url("../fonts/ptsansnarrowbold.woff") format("woff");
   font-weight: bold;
 }
@@ -296,14 +296,14 @@ img {
   .site-list__item--active::after {
     content: "";
     position: absolute;
-    left: 2px;
-    right: 2px;
+    left: 0px;
+    right: 0px;
     bottom: -2px;
     height: 3px;
     background-color: #826550;
   }
   .site-list__item a {
-    padding: 0 3px;
+    padding: 0 1px;
     line-height: 72px;
     background: none;
     border: none;
@@ -370,17 +370,38 @@ img {
   flex-direction: column;
 }
 .header-main__logo-link {
-  max-height: 85px;
+  text-align: center;
+}
+.header-main__logo-header img {
+  width: 226px;
+  height: 30px;
 }
 @media (min-width: 768px) {
+  .header-main {
+    background-color: #000;
+  }
   .header-main__logo-link {
     order: 2;
+    width: 100%;
     height: 400px;
+    background: url('../img/background-tablet.jpg') center -9px no-repeat;
+    padding: 0;
+  }
+  .header-main__logo-link img {
+    width: 370px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 40px;
   }
 }
 @media (min-width: 1200px) {
   .header-main__logo-link {
     height: 648px;
+    background-position: center 0;
+    background-size: cover;
+  }
+  .header-main__logo-link img {
+    margin-top: 57px;
   }
 }
 .stats {
