--- a/less/header-main.less
+++ b/less/header-main.less
@@ -10,18 +10,44 @@
 }
 
 .header-main__logo-link {
-    max-height: 85px;
+    text-align: center;
+}
+
+.header-main__logo-header img {
+    width: 226px;
+    height: 30px;
 }
 
 @media (min-width: @tablet-width) {
+    .header-main {
+        background-color: #000;
+    }
+
     .header-main__logo-link {
         order: 2;
+        width: 100%;
         height: 400px;
+        background: url('../img/background-tablet.jpg') center -9px no-repeat;
+        padding: 0;
+    }
+
+    .header-main__logo-link img {
+        width: 370px;
+        height: auto;
+        margin: 0 auto;
+        margin-top: 40px;
     }
 }
 
 @media (min-width: @desktop-width) {
     .header-main__logo-link {
         height: 648px;
+        background-position: center 0;
+        background-size: cover;
+    }
+
+    .header-main__logo-link img {
+        margin-top: 57px;
     }
 }
+
