--- a/less/nav-main.less
+++ b/less/nav-main.less
@@ -6,7 +6,7 @@
 
 .nav-main {
     position: relative;
-    width: 320px;
+    width: 100%;
     min-height: 51px;
     margin: 0 auto;
     background-color: #826550;
@@ -198,7 +198,7 @@
 @media (min-width: @tablet-width) {
     .user-list__login-icon {
         top: 28px;
-        left: 12px;
+        left: 32px;
     }
 
     .user-list__item a:hover,
@@ -274,8 +274,8 @@
     .nav-main__wrapper {
         display: flex;
         justify-content: space-between;
-        width: 640px;
-        margin: 0 auto;
+        width: 84%;
+        max-width: 960px;
     }
 
     .nav-main .nav-main__toggle {
@@ -287,6 +287,7 @@
         justify-content: space-between;
         flex-wrap: wrap;
         width: 570px;
+        flex-grow: 1;
     }
 
     .site-list__item {
@@ -338,10 +339,6 @@
 }
 
 @media (min-width: @desktop-width) {
-    .nav-main__wrapper {
-        width: 960px;
-    }
-    
     .site-list {
         width: 780px;
     }
