--- a/less/stats.less
+++ b/less/stats.less
@@ -108,6 +108,10 @@
 
     .stats__header {
         position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding: 33px 40px 30px;
         min-height: 129px;
 
         &::before {
@@ -121,8 +125,68 @@
         }
     }
 
+    .stats__slogan {
+        width: 240px;
+        margin-bottom: 18px;
+        padding: 0;
+        font-size: 40px;
+        line-height: 40px;
+        text-align: left;
+        text-transform: none;
+    }
+
+    .stats__info {
+        width: 210px;
+        margin-top: 6px;
+        padding-right: 40px;
+        text-align: left;
+        font-size: 20px;
+        line-height: 27px;
+    }
+
+    .stats__legend--top {
+        display: block;
+        width: 240px;
+        color: rgba(0, 0, 0, 0.3);
+    }
+
+    .stats__legend--bottom {
+        display: none;
+    }
+
     .stats__list {
         display: flex;
+    }
+
+    .stats__list tbody {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .stats__list tr {
+        width: 245px;
+        padding: 32px 35px 27px 40px;
+    }
+
+    .stats__list td {
+        display: block;
+        width: auto;
+        padding: 0;
+    }
+
+    .stats__value {
+        margin-bottom: 12px;
+        font-size: 72px;
+        line-height: 72px;
+    }
+
+    .stats__field {
+       font-size: 20px;
+       text-align: left; 
+    }
+
+    .stats__field br {
+        display: none;
     }
 }
 
@@ -134,10 +198,32 @@
     }
 
     .stats__header {
-        width: 250px;
-}
+        width: 240px;
+
+        &::before {
+            top: 22px;
+        }
+    }
+
+    .stats__slogan {
+        width: 240px;
+        margin-bottom: 42px;
+    }
+
+    .stats__info {
+        width: auto;
+        margin-top: 0;
+        margin-bottom: 32px;
+        margin-right: 35px;
+        padding-right: 0;
+    }
+
+    .stats__legend--top {
+        width: auto;;
+    }
 
     .stats__list {
         width: 640px;
+        display: flex;
     }
 }
