--- a/less/stats.less
+++ b/less/stats.less
@@ -5,7 +5,7 @@
 @bg-darkgray: #242424;
 
 .stats {
-    width: 320px;
+    width: auto;
     margin: 0 auto;
 }
 
@@ -101,7 +101,8 @@
 
 @media (min-width: @tablet-width) {
     .stats {
-        width: 640px;
+        width: 84%;
+        max-width: 1200px;
         margin: 0 auto;
         margin-top: -185px;
     }
@@ -126,7 +127,7 @@
     }
 
     .stats__slogan {
-        width: 240px;
+        width: 50%;
         margin-bottom: 18px;
         padding: 0;
         font-size: 40px;
@@ -136,7 +137,7 @@
     }
 
     .stats__info {
-        width: 210px;
+        width: 32.8%;
         margin-top: 6px;
         padding-right: 40px;
         text-align: left;
@@ -146,7 +147,7 @@
 
     .stats__legend--top {
         display: block;
-        width: 240px;
+        width: 50%;
         color: rgba(0, 0, 0, 0.3);
     }
 
@@ -164,7 +165,8 @@
     }
 
     .stats__list tr {
-        width: 245px;
+        width: 50%;
+        box-sizing: border-box;
         padding: 32px 35px 27px 40px;
     }
 
@@ -193,12 +195,13 @@
 @media (min-width: @desktop-width) {
     .stats {
         display: flex;
-        width: 960px;
         margin-top: -160px;
     }
 
     .stats__header {
         width: 240px;
+        flex-grow: 1;
+        flex-direction: column;
 
         &::before {
             top: 22px;
@@ -219,11 +222,13 @@
     }
 
     .stats__legend--top {
-        width: auto;;
+        width: auto;
+        margin-top: auto;
     }
 
     .stats__list {
         width: 640px;
         display: flex;
+        flex-grow: 1;
     }
 }
