--- a/less/style.less
+++ b/less/style.less
@@ -30,6 +30,12 @@ body {
     background-color: @bg-darkgray;
 }
 
+@media (min-width: @tablet-width) {
+    body {
+        background-color: #353535;
+    }
+}
+
 img {
     max-width: 100%;
     height: auto;
