--- a/css/advantages.css
+++ b/css/advantages.css
@@ -1,8 +1,11 @@
 .advantages {
-  width: auto;
+  width: 84%;
+  max-width: 960px;
+  margin: 0 auto;
   background-color: #242424;
 }
-.slider__list {
+.advantages__list {
+  position: relative;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -15,12 +18,14 @@
   padding-top: 150px;
   text-align: center;
   margin-bottom: 14px;
+  text-transform: uppercase;
 }
 .advantages__title--fast::before {
   position: absolute;
   content: "";
   top: 24px;
-  left: calc(50%);
+  left: 50%;
+  transform: translateX(-50%);
   width: 95px;
   height: 94px;
   background-image: url(../img/advantages-scissors.png);
@@ -29,24 +34,45 @@
   position: absolute;
   content: "";
   top: 24px;
-  left: calc(50%);
+  left: 50%;
+  transform: translateX(-50%);
   width: 95px;
-  height: 94px;
+  height: 88px;
   background-image: url(../img/advantages-cool.png);
 }
 .advantages__title--expensive::before {
   position: absolute;
   content: "";
   top: 24px;
-  left: calc(50%);
+  left: 50%;
+  transform: translateX(-50%);
   width: 95px;
-  height: 94px;
+  height: 91px;
   background-image: url(../img/advantages-expensive.png);
 }
 .advantages__description {
-  margin: 0;
-  padding: 0;
+  margin: 0 20px;
+  padding: 0 25px;
   text-align: center;
+}
+.advantages__item--cool,
+.advantages__item--expensive {
+  display: none;
+}
+@media (min-width: 768px) {
+  .advantages__item--cool,
+  .advantages__item--expensive {
+    display: block;
+  }
+  .advantages {
+    background-color: #353535;
+  }
+  .news svg {
+    height: 42px;
+  }
+  .news polygon {
+    fill: #353535;
+  }
 }
 .news {
   background-color: #fff;
