--- a/less/nav-main.less
+++ b/less/nav-main.less
@@ -2,7 +2,6 @@
 
 @tablet-width: 768px;
 @desktop-width: 1200px;
-@mobile-width-only: 767px;
 
 .nav-main {
     position: relative;
@@ -214,7 +213,7 @@
     opacity: 1;
 }
 
-@media (max-width: @mobile-width-only) {
+@media (max-width: @tablet-width) {
     .nav-main--closed .site-list__item {
         display: none;
 
