--- a/less/advantages.less
+++ b/less/advantages.less
@@ -26,6 +26,7 @@
     text-align: center;
     font-size: 30px;
     line-height: 30px;
+    font-weight: bold;
     margin-bottom: 14px;
     text-transform: uppercase;
 }
@@ -64,9 +65,45 @@
 }
 
 .advantages__description {
+    margin: 0;
+    margin-bottom: 30px;
     padding: 0 18px;
     font-size: 20px;
     text-align: center;
+}
+
+.advantages__item {
+    display: none;
+}
+
+.slider__item--active {
+    display: block;
+}
+
+.advantages__toogle {
+    margin: 0;
+    margin-bottom: 13px;
+    text-align: center;
+}
+
+.slider__toggle {
+    width: 10px;
+    height: 10px;
+    padding: 0;
+    margin-left: 23px;
+    border: 2px solid rgba(255, 255, 255, 0.3);
+    background-color: transparent;
+    transform: rotate(45deg);
+}
+
+.slider__toggle--active {
+    margin-left: 0;
+    border: 2px solid rgba(255, 255, 255, 1);
+    background-color: #fff;
+}
+
+.slider__toggle span {
+    display: none;
 }
 
 @media (min-width: @tablet-width) {
@@ -147,6 +184,10 @@
     .news polygon {
         fill: #353535;
     }
+
+    .advantages__toogle {
+        display: none;
+    }
 }
 
 @media (min-width: @desktop-width) {
@@ -192,8 +233,8 @@
         top: 79px;
         left: 50%;
     }
-}
 
-.news {
-    background-color: #fff;
+    .advantages__toogle {
+        display: none;
+    }
 }
