--- a/less/stats.less
+++ b/less/stats.less
@@ -195,6 +195,7 @@
 @media (min-width: @desktop-width) {
     .stats {
         display: flex;
+        max-width: 1200px;
         margin-top: -160px;
     }
 
