Главная без подвала

--- a/less/advantages.less
+++ b/less/advantages.less
@@ -134,6 +134,10 @@
         text-align: left;
     }
 
+    .slider__list {
+        margin-bottom: 43px;
+    }
+
     .advantages__item::after {
         position: absolute;
         content: "";
