--- a/css/reviews.css
+++ b/css/reviews.css
@@ -20,11 +20,12 @@
 .reviews__write {
   display: none;
 }
-.slider__list {
+.reviews__list {
   margin-top: 26px;
 }
-.slider__item {
+.reviews__item {
   margin: 0;
+  padding-top: 24px;
 }
 .reviews__item {
   margin-left: 70px;
@@ -35,6 +36,11 @@
   top: 92px;
   left: 0;
 }
+.reviews__author-image {
+  width: 50px;
+  height: 49px;
+  object-fit: cover;
+}
 .reviews__author-name {
   font-size: 24px;
   font-weight: bold;
@@ -43,10 +49,162 @@
 .reviews__text {
   margin: 0;
   margin-top: 14px;
+  margin-bottom: 30px;
+}
+.reviews__next,
+.reviews__prev {
+  display: none;
 }
 .reviews__toggles {
   text-align: center;
+  padding-bottom: 18px;
+  font-size: 0;
+}
+.reviews__toggles .slider__toggle--active {
+  background-color: #000000;
+  border: 2px solid #000000;
 }
 .slider__toggle--reviews {
   border: 2px solid rgba(0, 0, 0, 0.3);
+}
+.footer-contacts__title {
+  margin: 0;
+}
+.footer-main polygon {
+  fill: #f8f5f2;
+}
+@media (min-width: 768px) {
+  .reviews__wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 84%;
+    max-width: 960px;
+    padding-top: 35px;
+  }
+  .reviews__title {
+    padding-top: 0;
+    font-size: 40px;
+    line-height: 40px;
+    text-align: left;
+  }
+  .reviews__write {
+    display: block;
+  }
+  .reviews_list {
+    position: relative;
+    width: 100%;
+    padding: 0 48px;
+    margin: 0 auto;
+    margin-top: 36px;
+    border-right: 1px solid #e5ddd5;
+    border-left: 1px solid #e5ddd5;
+  }
+  .reviews_list::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 1px;
+    background-color: #e5ddd5;
+  }
+  .reviews__item {
+    position: relative;
+    margin-left: 0;
+    padding: 32px 25px 38px 140px;
+    border-right: 1px solid #e5ddd5;
+    border-left: 1px solid #e5ddd5;
+  }
+  .reviews__author-picture {
+    top: 41px;
+    left: 70px;
+    transform: translateX(-50%);
+  }
+  .reviews__author-image {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+  .reviews__text {
+    margin: 0;
+    margin-top: 16px;
+  }
+  .reviews__toggles {
+    display: flex;
+    position: relative;
+    width: 100%;
+    top: 1px;
+    margin: 0 auto;
+    margin-top: -6px;
+    padding-bottom: 71px;
+  }
+  .reviews__toggles::after,
+  .reviews__toggles::before {
+    content: "";
+    position: relative;
+    width: 100px;
+    height: 1px;
+    top: 4px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    background-color: #e5ddd5;
+  }
+  .reviews__toggles::before {
+    margin-right: 25px;
+  }
+  .reviews__toggles::after {
+    margin-left: 25px;
+  }
+  .reviews__prev,
+  .reviews__next {
+    position: absolute;
+    display: block;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 0;
+    height: 0;
+    padding: 0;
+    border: none;
+    border-top: 6px solid #f8f5f2;
+    border-right: 12px solid #000000;
+    border-bottom: 6px solid #f8f5f2;
+  }
+  .reviews__prev {
+    left: 17px;
+  }
+  .reviews__next {
+    right: 17px;
+    transform: rotate(180deg);
+  }
+  .reviews__next span,
+  .reviews__prev span {
+    display: none;
+  }
+  .footer-main svg {
+    display: none;
+  }
+}
+@media (min-width: 1200px) {
+  .reviews__wrapper {
+    width: 80%;
+    max-width: 1200px;
+    padding-top: 35px;
+  }
+  .reviews__item {
+    padding: 30px 105px 34px 320px;
+  }
+  .reviews__title {
+    margin-left: 71px;
+  }
+  .reviews__author-picture {
+    top: 1px;
+    left: 0;
+    transform: none;
+  }
+  .reviews__author-image {
+    width: 249px;
+    height: 160px;
+    border-radius: 0;
+  }
 }
