--- a/less/style.less
+++ b/less/style.less
@@ -74,6 +74,12 @@ button:visited {
     color: #000;
 }
 
+@media (min-width: @tablet-width) {
+    .button {
+        width: 160px;
+    }
+}
+
 .button:hover {
     border: 1px solid #d5cabe;
 }
@@ -90,3 +96,4 @@ button:visited {
 @import "advantages.less";
 @import "news.less";
 @import "reviews.less";
+@import "footer.less";
